added equations generator, created shuffle.js

--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
         </div>
     </div>
 
-    
+
     <!-- Script -->
+    <script src="shuffle.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
