--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <input type="radio" name="questions" value="10" id="value-10">
                         <span class="best-score">
                             <span>Best Score</span>
-                            <span class="best-score-value">0.0s</span>
+                            <span class="best-score-value"></span>
                         </span>
                     </div>
                      <!-- 25 Questions input -->
@@ -34,7 +34,7 @@
                         <input type="radio" name="questions" value="25" id="value-25">
                         <span class="best-score">
                             <span>Best Score</span>
-                            <span class="best-score-value">0.0s</span>
+                            <span class="best-score-value"></span>
                         </span>
                     </div>
                      <!-- 50 Questions input -->
@@ -43,7 +43,7 @@
                         <input type="radio" name="questions" value="50" id="value-50">
                         <span class="best-score">
                             <span>Best Score</span>
-                            <span class="best-score-value">0.0s</span>
+                            <span class="best-score-value"></span>
                         </span>
                     </div>
                      <!-- 99 Questions input -->
@@ -52,7 +52,7 @@
                         <input type="radio" name="questions" value="99" id="value-99">
                         <span class="best-score">
                             <span>Best Score</span>
-                            <span class="best-score-value">0.0s</span>
+                            <span class="best-score-value"></span>
                         </span>
                     </div>
                 </div>
@@ -74,8 +74,8 @@
             <div class="item-container"> </div>
             <!-- Right/Wrong Buttons -->
             <div class="item-footer">
-                <button class="wrong">Wrong</button>
-                <button class="right">Right</button>
+                <button class="wrong" onclick="select(false)">Wrong</button>
+                <button class="right" onclick="select(true)">Right</button>
             </div>
         </div>
 
@@ -84,13 +84,13 @@
             <!-- Score Contaienr -->
             <div class="score-container">
                 <h1 class="title">Your Time</h1>
-                <h1 class="final-time">3.4s</h1>
-                <h1 class="base-time">Base Time: 2.4s</h1>
-                <h1 class="penalty-time">Penalty: +1.0s</h1>
+                <h1 class="final-time"></h1>
+                <h1 class="base-time"></h1>
+                <h1 class="penalty-time"></h1>
             </div>
             <!-- Play Again Button -->
             <div class="score-footer">
-                <button class="play-again">Play Again</button>
+                <button class="play-again" onclick="playAgain()" hidden>Play Again</button>
             </div>
         </div>
     </div>
